--- a/src/App/App.module.css
+++ b/src/App/App.module.css
@@ -14,9 +14,10 @@
 .interfaceContainer{
   top: 45px;
   left: 600px;
-  width: 500px;
-  position: fixed;
-  /* display: f; */
+  /* width: 500px; */
+  /* position: fixed; */
+  display: flex;
+  flex-direction: column;
   /* gap: 20px;/ */
 }
 
@@ -85,6 +86,7 @@ background-color: red;
   margin-bottom: 30px;
   display: flex;
   align-items: center;
+  flex-direction: column;
 }
 
 #searchInput{
@@ -95,4 +97,11 @@ background-color: red;
 #searchButton{
   height: 32px;
 
+}
+
+.searchResult{
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
+  margin: 10px;
 }
