--- a/src/App/App.module.css
+++ b/src/App/App.module.css
@@ -6,7 +6,7 @@
 }
 
 .chartContainer {
-  
+  width: 50%
 }
 
 
@@ -14,7 +14,7 @@
 .interfaceContainer{
   top: 45px;
   left: 600px;
-  /* width: 500px; */
+  width: 50%;
   /* position: fixed; */
   display: flex;
   flex-direction: column;
@@ -28,20 +28,20 @@
 
 .functionContainer{
   display: flex;
+  flex-direction: column;
   gap: 25px;
 }
 
 .counterContainer {
-display: flex;
-border: 1px solid #000000;
-border-radius: 6px;
-overflow: hidden;
-
+  display: flex;
+  border: 1px solid #000000;
+  border-radius: 100px;
+  overflow: hidden;
 }
 
 #counterButton {
-width: 20px;
-height: 30px;
+width: 30%;
+height: 100%;
 font-size: 20px;
 border: none;
 background-color: white;
@@ -53,19 +53,22 @@ background-color: #f0f0f0;
 }
 
 #counterValue {
-width: 35px;
-line-height: 30px;
+width: 40%;
+line-height: 100%;
 font-weight: bold;
 text-align: center;
 border: none;
 }
 
+#cost {
+
+}
 
 #buy{
-width: 55px;
-background-color: red;
+  /* width: 55px; */
+  background-color: red;
   border-radius: 5px;
-  color: #fff;
+  color: #fff;  
 }
 
 #buy:active{
@@ -73,7 +76,7 @@ background-color: red;
 }
 
 #sell{
-  width: 55px;
+  /* width: 55px; */
   background-color: blue;
   border-radius: 5px;
   color: #fff;
