--- a/src/App/App.module.css
+++ b/src/App/App.module.css
@@ -1,7 +1,7 @@
 .App{
   padding: 30px;
   display: flex;
-  flex-direction: row;    
+  /* align-items: start; */
   gap: 120px;
 }
 
@@ -13,24 +13,33 @@
 
 
 .interfaceContainer{
-  top: 45px;
+  /* top: 45px; */
   left: 600px;
-  width: 50%;
-  /* position: fixed; */
+  /* width: 50%; */
+  position: fixed;
   display: flex;
+  align-items: center;
   flex-direction: column;
-  /* gap: 20px;/ */
+  gap: 50px;
+  padding: 20px;
 }
 
 #money{
   position: relative;
-  left: 200px;
+  /* left: 200px; */
+}
+
+.tradeContainer{
+  display: flex;
+  gap: 400px;
 }
 
 .functionContainer{
   display: flex;
   flex-direction: column;
   gap: 25px;
+  /* position: fixed; */
+  /* top: 100px; */
 }
 
 .counterContainer {
@@ -38,6 +47,7 @@
   border: 1px solid #000000;
   border-radius: 100px;
   overflow: hidden;
+  width: 100px;
 }
 
 #counterButton {
@@ -70,6 +80,7 @@ border: none;
   background-color: red;
   border-radius: 5px;
   color: #fff;  
+  /* width: 20%; */
 }
 
 #buy:active{
@@ -78,6 +89,7 @@ border: none;
 
 #sell{
   /* width: 55px; */
+  /* width: 20%; */
   background-color: blue;
   border-radius: 5px;
   color: #fff;
@@ -91,10 +103,13 @@ border: none;
   display: flex;
   align-items: center;
   flex-direction: column;
+  /* position: fixed;
+  right: 100px;
+  top: 100px; */
 }
 
 #searchInput{
-  height: 25px;
+  height: 28px;
   
 }
 
