--- a/src/multiplechart/multiplechart.module.css
+++ b/src/multiplechart/multiplechart.module.css
@@ -1,8 +1,9 @@
 .charts{
-    width: 400px;
+    width: 450px;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     margin-left: 20px;
     gap: 20px;
+    padding: 20px;
 }
